Added cython as a dependency package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
         "numpy",
         "rasterio",
         "matplotlib",
+        "cython",
 ]
 classifiers = [
         "Programming Language :: Python :: 3",
