--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
         "numpy",
         "rasterio",
         "matplotlib",
+        "sortedcontainers",
         "cython",
 ]
 classifiers = [
