--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,6 @@ dependencies = [
         "rasterio",
         "matplotlib",
         "sortedcontainers",
-        "cython",
 ]
 classifiers = [
         "Programming Language :: Python :: 3",
@@ -37,13 +36,16 @@ Changelog = "https://github.com/pyregence/pyretechnics/blob/main/CHANGELOG.md"
 
 [project.optional-dependencies]
 dev = [
-    "pytest",
-    "twine",
-    "snakeviz",
+        "pytest",
+        "twine",
+        "snakeviz",
 ]
 
 [build-system]
-requires = ["hatchling"]
+requires = [
+        "hatchling",
+        "cython",
+]
 build-backend = "hatchling.build"
 
 [tool.pytest.ini_options]
