Made cython both a build-time and runtime dependency for pyretechnics

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
         "rasterio",
         "matplotlib",
         "sortedcontainers",
+        "cython",
 ]
 classifiers = [
         "Programming Language :: Python :: 3",
