--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-hatchling == 1.26.1
 pytest == 8.3.3
 twine == 5.1.1
 snakeviz == 2.2.2
@@ -6,4 +5,5 @@ matplotlib == 3.8.2
 numpy == 1.24.4
 rasterio == 1.3.7
 sortedcontainers == 2.4.0
-cython == 3.0.11
+Cython == 3.0.11
+setuptools == 67.6.1
