--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pyretechnics"
-version = "2024.11.7"
+dynamic = ["version"]
 authors = [
         {name="Gary W. Johnson, PhD", email="gjohnson@sig-gis.com"},
         {name="Valentin Waeselynck", email="vwaeselynck@sig-gis.com"},
@@ -44,7 +44,8 @@ dev = [
 
 [build-system]
 requires = [
-        "setuptools",
+        "setuptools>=64",
+        "setuptools-scm>=8",
         "Cython",
         "numpy",
 ]
@@ -53,3 +54,5 @@ build-backend = "setuptools.build_meta"
 [tool.pytest.ini_options]
 addopts = ["--import-mode=importlib"]
 pythonpath = "src"
+
+[tool.setuptools_scm]
