Fix syntax error in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,8 +39,8 @@ dev = [
         "twine",
         "pkginfo",
         "matplotlib",
-        "dask"
-        "distributed"
+        "dask",
+        "distributed",
 ]
 
 [build-system]
