--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,10 @@ keywords = ["fire", "wildfire", "fire behavior", "fire spread"]
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-        "numpy",
-        "rasterio",
-        "sortedcontainers",
-        "Cython",
+        "numpy ~= 1.24.4",
+        "rasterio ~= 1.3.7",
+        "sortedcontainers ~= 2.4.0",
+        "Cython ~= 3.0.11",
 ]
 classifiers = [
         "Programming Language :: Python :: 3",
@@ -34,22 +34,22 @@ Changelog = "https://github.com/pyregence/pyretechnics/blob/main/CHANGELOG.md"
 
 [project.optional-dependencies]
 dev = [
-        "pytest",
-        "snakeviz",
-        "twine",
-        "pkginfo",
-        "matplotlib",
-        "dask",
-        "distributed",
+        "pytest ~= 8.3.3",
+        "snakeviz ~= 2.2.2",
+        "twine ~= 5.1.1",
+        "pkginfo ~= 1.10.0",
+        "matplotlib ~= 3.8.2",
+        "dask ~= 2024.4.2",
+        "distributed ~= 2024.4.2",
 ]
 
 [build-system]
 requires = [
-        "setuptools",
-        "wheel",
-        "build",
-        "Cython",
-        "numpy",
+        "setuptools ~= 67.6.1",
+        "wheel ~= 0.40.0",
+        "build ~= 0.7.0",
+        "Cython ~= 3.0.11",
+        "numpy ~= 1.24.4",
 ]
 build-backend = "setuptools.build_meta"
 
