--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,9 @@ authors = [
 description = "A Python library for simulating fire behavior in a variety of ways."
 keywords = ["fire", "wildfire", "fire behavior", "fire spread"]
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = "~=3.11"
 dependencies = [
-        "numpy ~= 1.24.4",
+        "numpy ~= 2.2.5",
         "rasterio ~= 1.3.7",
         "sortedcontainers ~= 2.4.0",
         "Cython ~= 3.0.11",
@@ -37,7 +37,7 @@ dev = [
         "pytest ~= 8.3.3",
         "snakeviz ~= 2.2.2",
         "twine ~= 5.1.1",
-        "pkginfo ~= 1.10.0",
+        "pkginfo ~= 1.12.1.2",
         "matplotlib ~= 3.8.2",
         "dask ~= 2024.4.2",
         "distributed ~= 2024.4.2",
@@ -45,11 +45,11 @@ dev = [
 
 [build-system]
 requires = [
-        "setuptools ~= 67.6.1",
+        "setuptools ~= 79.0.1",
         "wheel ~= 0.40.0",
         "build ~= 0.7.0",
         "Cython ~= 3.0.11",
-        "numpy ~= 1.24.4",
+        "numpy ~= 2.2.5",
 ]
 build-backend = "setuptools.build_meta"
 
